--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@heroicons/react": "^1.0.5",
 		"next": "^12.0.4",
 		"nextjs-progressbar": "^0.0.13",
 		"react": "^17.0.2",
@@ -21,6 +22,7 @@
 		"eslint": "7.32.0",
 		"eslint-config-next": "12.0.4",
 		"postcss": "^8.3.5",
+		"tailwind-scrollbar-hide": "^1.1.7",
 		"tailwindcss": "^2.2.4",
 		"typescript": "^4.5.4"
 	},
