--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,14 @@
 {
 	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@/components/*": ["components/*"],
+			"@/lib/*": ["lib/*"],
+			"@/styles/*": ["styles/*"],
+
+			"@/home/*": ["components/home_components/*"]
+		},
+
 		"target": "es5",
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
