--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-	"name": "your-project-name",
-	"version": "0.1.0",
+	"name": "hulu-clone-withrvr",
+	"discription": "Hulu Clone made using nextjs + tailwindcss + typscript",
+	"email": "contactwithrvr@gmail.com",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -26,5 +28,11 @@
 		"tailwindcss": "^3.0.7",
 		"typescript": "^4.5.4"
 	},
-	"keywords": []
+	"keywords": [
+		"hulu-clone",
+		"clone",
+		"nextjs",
+		"tailwindcss",
+		"typescript"
+	]
 }
